--- a/modules/airc_module/hello_module/templates/wellcome-body.html.twig
+++ b/modules/airc_module/hello_module/templates/wellcome-body.html.twig
@@ -29,14 +29,13 @@
                                 <p class="paragraph">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. At risus viverra adipiscing at in. Pellentesque adipiscing commodo elit at imperdiet dui accumsan. Dolor morbi non arcu risus quis varius quam quisque id. Vulputate dignissim suspendisse in est ante in nibh mauris. Dignissim convallis aenean et tortor at risus. Tristique sollicitudin nibh sit amet commodo. Feugiat in fermentum posuere urna. Urna porttitor rhoncus dolor purus non enim. Leo integer malesuada nunc vel risus commodo. Dictumst quisque sagittis purus sit amet volutpat consequat mauris. Interdum varius sit amet mattis vulputate enim. Orci a scelerisque purus sem
                                 </p>
-
                             </div>
 
                         </div>
                         <div>
                             <div class="btn-baner2">
                                 <img class="button-2" src="https://c.animaapp.com/SqS4oaEV/img/button-2.svg" alt="Button 2">
-                                <img class="button " src="https://c.animaapp.com/SqS4oaEV/img/button-3.svg" alt="Button 1">
+                                <img class="button-1 " src="https://c.animaapp.com/SqS4oaEV/img/button-3.svg" alt="Button 1">
                             </div>
                         </div>
 
@@ -51,7 +50,7 @@
                     <div class="product__item__container__shape">
                     </div>
                     <div class="product__item__container">
-                        <img class="product__item__image" src="assets/images/baner1/Image.png"">
+                        <img class="product__item__image" src="{{ file_url('themes/custom/custom_theme/images/baner1/Image.png') }}">
                         </img>
                         <div class="product__item__content">
                             <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
@@ -62,20 +61,19 @@
                 <li class="product__item">
                     <div class="product__item__container__shape">
                     </div>
-                    <div class="product__item__container">
-                        <img class="product__item__image "src="assets/images/baner1/1.png"">
-                        </img>
-                        <div class="product__item__content">
-                            <h3 class="product__item__title">Medical images diagnosis with Deep Learning, Transfer learning and Knowledge Graphs</h3>
-                            <p class="product__item__description">Lorem ipsum dolor sit amet.</p>
-                        </div>
-                    </div>
+                  <div class="product__item__container">
+                      <img class="product__item__image" src="{{ file_url('themes/custom/custom_theme/images/baner1/1.png') }}" alt="Product Image">
+                      <div class="product__item__content">
+                          <h3 class="product__item__title">Medical images diagnosis with Deep Learning, Transfer learning and Knowledge Graphs</h3>
+                          <p class="product__item__description">Lorem ipsum dolor sit amet.</p>
+                      </div>
+                  </div>
                 </li>
                 <li class="product__item">
                     <div class="product__item__container__shape">
                     </div>
                     <div class="product__item__container">
-                        <img class="product__item__image" src="assets/images/baner1/2.png">
+                        <img class="product__item__image" src="{{ file_url('themes/custom/custom_theme/images/baner1/2.png') }}">
                         </img>
                         <div class="product__item__content">
                             <h3 class="product__item__title">Patient monitoring via sensor systems</h3>
@@ -89,7 +87,7 @@
                     <div class="product__item__container__shape">
                     </div>
                     <div class="product__item__container">
-                        <img class="product__item__image" src="assets/images/baner1/3.png">
+                        <img class="product__item__image" src="{{ file_url('themes/custom/custom_theme/images/baner1/3.png') }}"
                         </img>
                         <div class="product__item__content">
                             <h3 class="product__item__title">Multi-modal & environmental AI</h3>
@@ -101,7 +99,7 @@
                     <div class="product__item__container__shape">
                     </div>
                     <div class="product__item__container">
-                        <img class="product__item__image" src="assets/images/baner1/4.png">
+                        <img class="product__item__image" src="{{ file_url('themes/custom/custom_theme/images/baner1/4.png') }}">
                         </img>
                         <div class="product__item__content">
                             <h3 class="product__item__title">Virtual Tourism with AR/VR</h3>
@@ -113,7 +111,7 @@
                     <div class="product__item__container__shape">
                     </div>
                     <div class="product__item__container">
-                        <img class="product__item__image" src="assets/images/baner1/5.png">
+                        <img class="product__item__image" src="{{ file_url('themes/custom/custom_theme/images/baner1/5.png') }}">
                         </img>
                         <div class="product__item__content">
                             <h3 class="product__item__title">Facial expression analysis application</h3>
@@ -132,10 +130,10 @@
             </div>
             <div class="row" style="padding-left: 2rem;">
                 <div class="img-baner2">
-                    <img class="" src="assets/images/banner2/Image.png">
-                    <img class="" src="assets/images/banner2/2.png">
-                    <img class="" src="assets/images/banner2/3.png">
-                    <img class="" src="assets/images/banner2/4.png">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/Image.png') }}">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/2.png') }}">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/3.png') }}">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/4.png') }}">
                 </div>
                 <div class="baner-2">
                     <div class="text-onbox pt-7">
@@ -159,10 +157,10 @@
             </div>
             <div class="row" style="margin-top: 2.5rem;padding-left: 2rem;">
                 <div class="img-baner2">
-                    <img class="" src="assets/images/banner2/5.png">
-                    <img class="" src="assets/images/banner2/6.png">
-                    <img class="" src="assets/images/banner2/7.png">
-                    <img class="" src="assets/images/banner2/8.png">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/5.png') }}">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/6.png') }}">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/7.png') }}">
+                    <img class="" src="{{ file_url('themes/custom/custom_theme/images/banner2/8.png') }}">
                 </div>
                 <div class="baner-2">
                     <div class="text-onbox pt-7">
@@ -186,7 +184,66 @@
             </div>
         </div>
         <div class="product__container container">
-            <h1 class="main__title text-center">Our Product</h1>
+            <div>
+                <h1 class="main__title text-center">Our Product</h1>
+            </div>
+            <div class="row">
+                <div class="container">
+                    <div class="baner-3">
+                        <div class="">
+                            <img class="img-2 img-fluid" src="https://c.animaapp.com/SqS4oaEV/img/button-2.svg" alt="Button 2">
+                        </div>
+                        <div class="container baner-3">
+                            <div class="row">
+                              <div class="col-sm-4">
+                                <div class="card image-banner3" style="background-color: #dcf2f1;">
+                                  <img class="image-3" src="https://c.animaapp.com/SqS4oaEV/img/image-32@2x.png" alt="Image 1">
+                                  <div class="card-body-bn3">
+                                    <h5 class="card-title name">Ministry of Health, Ministry of ICT, NGO, Hospitals,..</h5>
+                                    <p class="card-text paragraph-3">
+                                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorpe
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-sm-4">
+                                <div class="card image-banner3" style="background-color: #dcf2f1;">
+                                  <img class="image-3" src="https://c.animaapp.com/SqS4oaEV/img/image-32-1@2x.png" alt="Image 2">
+                                  <div class="card-body-bn3">
+                                    <h5 class="card-title name">Vietnam Academy of Science &amp; Technology</h5>
+                                    <p class="card-text paragraph-3">
+                                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorpe
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-sm-4">
+                                <div class="card image-banner3" style="background-color: #dcf2f1;">
+                                  <img class="image-3" src="https://c.animaapp.com/SqS4oaEV/img/image-32-2@2x.png" alt="Image 3">
+                                  <div class="card-body-bn3">
+                                    <h5 class="card-title name">Member universities of VNU</h5>
+                                    <p class="card-text paragraph-3">
+                                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorpe
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                      <div class="">
+                        <img class="img-2 img-fluid" src="https://c.animaapp.com/SqS4oaEV/img/button-3.svg" alt="Button 3">
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="product__container container">
+            <div>
+                <h1 class="main__title text-center">Our Company Structure</h1>
+            </div>
 
         </div>
     </div>
