--- a/themes/custom/custom_theme/css/style.css
+++ b/themes/custom/custom_theme/css/style.css
@@ -60,7 +60,7 @@
   justify-content: space-between;
   align-items: center;
 }
-.button,
+.button-1,
 .button-2 {
   width: 58px;
   height: 58px;
@@ -192,4 +192,31 @@
 }
 .btn-lr{
   margin-right: 13px;
+}
+.baner-3 {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  position: relative;
+  width: 100%;
+  margin-left: 1rem;
+  align-items: center;
+}
+
+.image-banner3 {
+  background: #DCF2F1;
+  box-shadow: 2px 2px 0px 2px #1E1E1E;
+  display: flex;
+  align-items: center;
+  padding: 48px;
+  gap: 22px;
+  width: 100%;
+}
+
+.image-3 {
+  width: 60%;
+}
+
+.card-body-bn3 {
+  text-align: center;
 }
