--- a/themes/airc/templates/layout/html.html.twig
+++ b/themes/airc/templates/layout/html.html.twig
@@ -29,6 +29,8 @@
     not root_path ? 'path-frontpage' : 'path-' ~ root_path|clean_class,
     node_type ? 'page-node-type-' ~ node_type|clean_class,
     db_offline ? 'db-offline',
+    (b5_body_schema == 'light' ? ' text-dark' : (b5_body_schema == 'dark' ? ' text-light' :  ' ')),
+    (b5_body_bg_schema != 'none' ? " bg-#{b5_body_bg_schema}" : ' '),
     'd-flex flex-column h-100'
   ]
 %}
