--- a/themes/airc/css/style.css
+++ b/themes/airc/css/style.css
@@ -17,16 +17,95 @@
 .menu-language_item:first-child {
   margin-left: 0;
 }
+
 .menu-language_item:last-child {
   margin-right: 0;
 }
-.navbar-additional{
+
+.navbar-additional {
   justify-content: flex-end;
 }
-.region-nav-additional{
+
+.region-nav-additional {
   display: flex;
   align-items: center;
 }
-.nav-menu-wrap{
-background-color: ;
+
+.navbar-menu-wrap {
+  background-color: #365486;
+  border: 2px solid #000;
+  border-radius: 12px;
+  color: #ffffff;
+}
+
+.navbar-menu-wrap>.navbar {
+  padding: 0;
+}
+
+.navbar-menu-wrap .menu--main ul>li .nav-link {
+  padding: 38px 34px;
+  border-left: 2px solid #000;
+}
+
+.navbar-menu-wrap .menu--main ul>li .nav-link.is-active {
+  background-color: #DCF2F1;
+  color: #000;
+}
+
+.region-nav-branding .navbar-brand {
+  padding: 0;
+  margin: 0;
+}
+
+.region-nav-branding .site-logo {
+  background-color: #DCF2F1;
+  padding: 20px 24px;
+  border-right: 2px solid #000;
+  border-top-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.region-nav-branding .site-logo img {
+  padding: 0;
+  margin: 0;
+}
+
+/* Banner */
+.banner-home {
+  margin-top: 30px;
+  padding: 0 30px;
+  position: relative;
+}
+
+.banner-home .box-banner {
+  padding: 60px 20px;
+  background-color: #dcf2f1;
+  border-radius: 12px;
+  overflow: hidden;
+  border: 2px solid #000;
+}
+
+.banner-home .owl-carousel .owl-nav .owl-prev,
+.banner-home .owl-carousel .owl-nav .owl-next {
+  width: 58px;
+  height: 58px;
+  position: absolute;
+  top: 50%;
+  background-color: #dcf2f1;
+  border: 2px solid #000;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+
+.banner-home .owl-carousel .owl-nav .owl-prev {
+  transform: translate(-50%, -50%);
+  left: 0;
+}
+
+.banner-home .owl-carousel .owl-nav .owl-next {
+  transform: translate(50%, -50%);
+  right: 0;
 }
