--- a/themes/airc/templates/layout/html.html.twig
+++ b/themes/airc/templates/layout/html.html.twig
@@ -37,25 +37,40 @@
 
 <!DOCTYPE html>
 <html{{html_attributes.addClass('h-100')}}>
-  <head>
-    <head-placeholder token="{{ placeholder_token }}">
-    <title>{{ head_title|safe_join(' | ') }}</title>
-    <css-placeholder token="{{ placeholder_token }}">
-    <js-placeholder token="{{ placeholder_token }}">
-  </head>
-  <body{{ attributes.addClass(body_classes) }}>
-    {#
-      Keyboard navigation/accessibility link to main content section in
-      page.html.twig.
-    #}
-    <div class="visually-hidden-focusable skip-link p-3 container">
-      <a href="#main-content" class="p-2">
-        {{ 'Skip to main content'|t }}
-      </a>
-    </div>
-    {{ page_top }}
-    {{ page }}
-    {{ page_bottom }}
-    <js-bottom-placeholder token="{{ placeholder_token }}">
-  </body>
-</html>
+	<head>
+		<head-placeholder token="{{ placeholder_token }}">
+			<title>{{ head_title|safe_join(' | ') }}</title>
+			<css-placeholder token="{{ placeholder_token }}">
+				<js-placeholder token="{{ placeholder_token }}">
+					<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+				</head>
+				<body{{attributes.addClass(body_classes)}}>
+					{#
+															      Keyboard navigation/accessibility link to main content section in
+															      page.html.twig.
+															    #}
+					<div class="visually-hidden-focusable skip-link p-3 container">
+						<a href="#main-content" class="p-2">
+							{{ 'Skip to main content'|t }}
+						</a>
+					</div>
+					{{ page_top }}
+					{{ page }}
+					{{ page_bottom }}
+					<js-bottom-placeholder token="{{ placeholder_token }}"></body>
+					<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+					<script>
+						$(document).ready(function () {
+              $('.owl-carousel').owlCarousel({
+                loop: true,
+                margin: 20,
+                nav: true,
+                dots:true,
+                items: 1,
+                // autoplay: true
+              })
+            });
+					</script>
+				</html>
