--- a/themes/airc/templates/views/demo.html.twig
+++ b/themes/airc/templates/views/demo.html.twig
@@ -24,9 +24,9 @@
         </div>
       </div>
     </div>
-    
   </div>
 </div>
+{% include "/themes/airc/templates/views/product.html.twig" %}
 <script>
   // $(document).ready(function () {
   // $('.owl-carousel').owlCarousel({loop: true, margin: 10, nav: true, items: 1})
