out-produc va esearch

--- a/themes/airc/templates/views/demo.html.twig
+++ b/themes/airc/templates/views/demo.html.twig
@@ -27,6 +27,8 @@
   </div>
 </div>
 {% include "/themes/airc/templates/views/product.html.twig" %}
+{% include "/themes/airc/templates/views/out-esearch.html.twig" %}
+{% include "/themes/airc/templates/views/out-product.html.twig" %}
 <script>
   // $(document).ready(function () {
   // $('.owl-carousel').owlCarousel({loop: true, margin: 10, nav: true, items: 1})
