--- a/themes/airc/templates/views/demo.html.twig
+++ b/themes/airc/templates/views/demo.html.twig
@@ -3,8 +3,10 @@
     <div class="box-item">
       <div class="box-banner">
         <div class="row d-flex justify-content-around">
-          <div class="col-6 content-img">
-            <img src="https://c.animaapp.com/SqS4oaEV/img/airc-log-1.png" alt="" class="img-fluid" />
+          <div class="col-6 d-flex justify-content-center align-items-center">
+            <div class="content-img">
+              <img src="{{ base_path ~ '/themes/airc/images/logo/airc_logo_full.png' }}" alt="" class="img-fluid" />
+            </div>
           </div>
           <div class="col-5 content-banner">
             <p class="content-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. At risus viverra adipiscing at in. Pellentesque adipiscing commodo elit at imperdiet dui accumsan. Dolor morbi non arcu risus quis varius quam quisque id. Vulputate dignissim suspendisse in est ante in nibh mauris. Dignissim convallis aenean et tortor at risus. Tristique sollicitudin nibh sit amet commodo. Feugiat in fermentum posuere urna. Urna porttitor rhoncus dolor purus non enim. Leo integer malesuada nunc vel risus commodo. Dictumst quisque sagittis purus sit amet volutpat consequat mauris. Interdum varius sit amet mattis vulputate enim. Orci a scelerisque purus sem</p>
@@ -26,7 +28,7 @@
     </div>
   </div>
 </div>
-{% include "/themes/airc/templates/views/product.html.twig" %}
+{% include '/themes/airc/templates/views/product.html.twig' %}
 <script>
   // $(document).ready(function () {
   // $('.owl-carousel').owlCarousel({loop: true, margin: 10, nav: true, items: 1})
