--- a/themes/airc/templates/layout/html.html.twig
+++ b/themes/airc/templates/layout/html.html.twig
@@ -43,6 +43,7 @@
 			<css-placeholder token="{{ placeholder_token }}">
 				<js-placeholder token="{{ placeholder_token }}">
 					<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 				</head>
 				<body{{attributes.addClass(body_classes)}}>
 					{#
