--- a/themes/airc/templates/layout/region--footer.html.twig
+++ b/themes/airc/templates/layout/region--footer.html.twig
@@ -43,7 +43,7 @@
               <div class="box-icon">
                 <i class="fa-solid fa-phone"></i>
               </div>
-              <div class="info-text">+91 91813 23 2309</div>
+              <div class="info-text"></div>
             </li>
             <li class="item-info">
               <div class="box-icon">
