--- a/themes/airc/templates/layout/html.html.twig
+++ b/themes/airc/templates/layout/html.html.twig
@@ -65,7 +65,7 @@
 					<script>
 						$(document).ready(function () {
               $('.owl-carousel').owlCarousel({
-                loop: true,
+                // loop: true,
                 margin: 20,
                 nav: true,
                 dots:true,
