--- a/themes/airc/templates/views/product.html.twig
+++ b/themes/airc/templates/views/product.html.twig
@@ -6,13 +6,11 @@
                 <div class="product__item__container__shape">
                 </div>
                 <div class="product__item__container">
-                    <img class="product__item__image">
+                    <img class="product__item__image" src="{{ file_url('themes/airc/images/baner1/Image.png') }}">
                     </img>
                     <div class="product__item__content">
                         <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
-                        <p class="product__item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam,
-                            voluptatum.</p>
+                        <p class="product__item__description"></p>
                     </div>
                 </div>
             </li>
@@ -20,13 +18,11 @@
                 <div class="product__item__container__shape">
                 </div>
                 <div class="product__item__container">
-                    <img class="product__item__image">
+                    <img class="product__item__image" src="{{ file_url('themes/airc/images/baner1/1.png') }}">
                     </img>
                     <div class="product__item__content">
-                        <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
-                        <p class="product__item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam,
-                            voluptatum.</p>
+                        <h3 class="product__item__title">Medical images diagnosis with Deep Learning, Transfer learning and Knowledge Graphs</h3>
+                        <p class="product__item__description"></p>
                     </div>
                 </div>
             </li>
@@ -34,13 +30,11 @@
                 <div class="product__item__container__shape">
                 </div>
                 <div class="product__item__container">
-                    <img class="product__item__image">
+                    <img class="product__item__image" src="{{ file_url('themes/airc/images/baner1/2.png') }}">
                     </img>
                     <div class="product__item__content">
-                        <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
-                        <p class="product__item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam,
-                            voluptatum.</p>
+                        <h3 class="product__item__title">Patient monitoring via sensor systems</h3>
+                        <p class="product__item__description"></p>
                     </div>
                 </div>
             </li>
@@ -50,13 +44,11 @@
                 <div class="product__item__container__shape">
                 </div>
                 <div class="product__item__container">
-                    <img class="product__item__image">
+                    <img class="product__item__image" src="{{ file_url('themes/airc/images/baner1/3.png') }}">
                     </img>
                     <div class="product__item__content">
-                        <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
-                        <p class="product__item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam,
-                            voluptatum.</p>
+                        <h3 class="product__item__title">Multi-modal & environmental AI</h3>
+                        <p class="product__item__description"></p>
                     </div>
                 </div>
             </li>
@@ -64,13 +56,11 @@
                 <div class="product__item__container__shape">
                 </div>
                 <div class="product__item__container">
-                    <img class="product__item__image">
+                    <img class="product__item__image" src="{{ file_url('themes/airc/images/baner1/4.png') }}">
                     </img>
                     <div class="product__item__content">
-                        <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
-                        <p class="product__item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam,
-                            voluptatum.</p>
+                        <h3 class="product__item__title">Virtual Tourism with AR/VR</h3>
+                        <p class="product__item__description"></p>
                     </div>
                 </div>
             </li>
@@ -78,13 +68,11 @@
                 <div class="product__item__container__shape">
                 </div>
                 <div class="product__item__container">
-                    <img class="product__item__image">
+                    <img class="product__item__image" src="{{ file_url('themes/airc/images/baner1/5.png') }}">
                     </img>
                     <div class="product__item__content">
-                        <h3 class="product__item__title">Medical Chatbot Systems & Extracting information from EMR</h3>
-                        <p class="product__item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Quisquam,
-                            voluptatum.</p>
+                        <h3 class="product__item__title">Facial expression analysis application</h3>
+                        <p class="product__item__description"></p>
                     </div>
                 </div>
             </li>
