--- a/themes/airc/templates/views/demo.html.twig
+++ b/themes/airc/templates/views/demo.html.twig
@@ -2,8 +2,16 @@
 {% include '/themes/airc/templates/views/product.html.twig' %}
 {% include '/themes/airc/templates/views/out-esearch.html.twig' %}
 {% include '/themes/airc/templates/views/collaboration.html.twig' %}
+
 <script>
-  // $(document).ready(function () {
-  // $('.owl-carousel').owlCarousel({loop: true, margin: 10, nav: true, items: 1})
-  // });
+	$(document).ready(function () {
+    $('.owl-carousel').owlCarousel({
+        // loop: true,
+        margin: 20,
+        nav: true,
+        dots: true,
+        items: 1,
+        // autoplay: true
+    })
+});
 </script>
